--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -202,4 +202,96 @@ nav{
     display: flex;
     justify-content: space-evenly;
     margin-top: 40px;
+    h3{
+        font-family: variables.$gordita;
+        font-size: 3.25rem;
+    }
+    p{
+        text-align: center;
+        margin-top: 20px;
+    }
+}
+
+// Job listings Section
+
+.jobListings{
+    margin-top: 100px;
+    .jobListingsTitleContainer{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 60px;
+        a{
+            color: variables.$logoGreen;
+            font-family: variables.$gordita;
+            text-decoration: none;
+            border-bottom: 1px solid variables.$logoGreen;
+            padding-bottom: 5px;
+            font-weight: bold;
+            font-size: 1.19rem;
+        }
+    }
+    h2{
+        font-family: variables.$garmond;
+        font-size: 4.5rem;
+    }
+}
+
+.listings{
+    border: 1px solid lightgray;
+    border-radius: 10px;
+}
+
+.jobListing{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px 0;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+    width: 100%;
+    .positionAndLogo{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        width: 300px;
+    }
+    .jobDate{
+        width: 200px;
+    }
+    
+    .jobButtons{
+        display: flex;
+        gap: 10px;
+    }
+    .jobLocation{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 200px;
+        P:first-of-type{
+            font-weight: 300;
+        }
+        P:last-of-type{
+            font-weight: bold;
+        }
+    }
+    .jobButtons{
+        display: flex;
+        align-items: center;
+        button{
+            background-color: variables.$logoGreen;
+            color: white;
+            border: 1px solid variables.$logoGreen;
+            border-radius: 17px;
+            text-transform: uppercase;
+            font-size: 0.75rem;
+            width:100px;
+            height: 35px;
+            cursor: pointer;
+        }
+        .bookmark{
+            align-self: center;
+            cursor: pointer;
+        }
+    }
 }
