--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -5,6 +5,12 @@
     src: url('./assets/fonts/gordita-regular.woff') format('woff');
 }
 
+@font-face{
+    font-family: 'Gordita';
+    font-weight: 300;
+    src: url('./assets/fonts/gordita-light.woff') format('woff');
+}
+
 //Colours
 $headerBg: #E9EAEC;
 $darkGreen: #254135;
